--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
 }
 
 .hero {
-  height: 106vh;
+  height: 100%;
   width: 100%;
   position: relative;
 }
@@ -78,8 +78,22 @@
   opacity: 0.4;
   filter: brightness(50%);
   height: 200px;
+  animation: colorFadeInOut 10s linear infinite;
 }
 
+ @keyframes colorFadeInOut {
+      0% {
+       opacity: 0.2;
+      }
+      50%{
+               opacity: 0.7;
+
+      }
+      100% {
+               opacity: 0.2;
+
+      }
+    }
 .hero-h {
   font-size: 25px;
   color: rgb(255, 166, 0);
@@ -118,17 +132,16 @@
 .platform-cont {
   width: 90%;
   height: 90%;
-  border: 1px solid red;
   z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 40px;
+  gap: 70px;
 }
 
 .platform-h {
-  font-size: 3.375rem;
+  font-size: 3.200rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 3.5rem;
   text-align: center;
@@ -142,5 +155,225 @@
 
 
 .platform-points{
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  
 }
+
+
+.platform-point{
+  display: flex;
+  flex-direction: column;
+  /* gap: 5px; */
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  background-color: rgba(62, 62, 62, 0.174);
+  border-radius:3px;
+  transition: 0.5s;
+}
+
+.platform-point:hover{
+  transform: scale(1.1,1.1);
+    background-color: rgba(0, 94, 157, 0.142);
+
+}
+.platform-icon{
+  /* height: 100px;
+  width: 100px; */
+  font-size: 80px;
+   color: orange;
+}
+
+
+.platform-name{
+  font-size: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  font-weight: 700;
+  color: orange;
+}
+
+
+.latest{
+  height: 90vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
+.latest-cont{
+  height: 90%;
+  width: 90%;
+display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 70px;
+}
+
+.latest-h{
+font-size: 3.200rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  line-height: 3.5rem;
+  text-align: center;
+  font-weight: 700;
+  color: rgb(0, 191, 255);
+  text-shadow: 0 0 10px rgba(0, 191, 255, 0.8),
+    0 0 20px rgba(0, 191, 255, 0.6),
+    0 0 30px rgba(0, 191, 255, 0.4),
+    0 0 40px rgba(0, 191, 255, 0.2);
+}
+
+
+.latest-card{
+  height: 400px;
+  width: 420px;
+  border: 1.5px solid rgb(29, 29, 29);
+  border-radius: 5px;
+  position: relative;
+  transform: 0.5s;
+}
+
+
+.latest-img{
+  height: 400px;
+  width: 420px;
+  object-fit: cover;
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+/* z-index: -1; */
+
+}
+.latest-card:hover .latest-txt{
+  height: 100%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.latest-txt{
+font-size: 30px;
+color: #fff;
+z-index: 10;
+position: absolute;
+background-color: rgba(29, 29, 29, 0.64) ;
+bottom: 0;
+left: 0;
+right: 0;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+transition:0.5s ease-in-out;
+height: 80px;
+display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.latest-card:hover .latest-txt{
+  height: 100%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+background-color: rgba(12, 12, 12, 0.873) ;
+text-decoration: underline;
+}
+
+
+
+
+.data-carousel {
+  position: relative;
+  overflow: hidden;
+  height: 90vh;
+  /* border: 1px solid red; */
+}
+
+.data-carousel:after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0) ,black);
+}
+
+.carousel-slide {
+  /* display: none; */
+}
+
+.carousel-slide img {
+  width: 100%;
+  height: 100%;
+}
+
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(255, 255, 255, 0.5);
+  border: none;
+  color: #000;
+  padding: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  z-index: 20;
+}
+
+.prev-button {
+  left: 10px;
+}
+
+.next-button {
+  right: 10px;
+}
+
+
+.pagination{
+  height: 100vh;
+  background: black;
+  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-cont{
+  height: 90%;
+  width: 90%;
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 70px;
+}
+
+
+
+.page-h{
+  font-size: 3.200rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  line-height: 3.5rem;
+  text-align: center;
+  font-weight: 700;
+  color: rgb(255, 165, 0);
+text-shadow: 0 0 10px rgba(255, 165, 0, 0.8),
+  0 0 20px rgba(255, 165, 0, 0.6),
+  0 0 30px rgba(255, 165, 0, 0.4),
+  0 0 40px rgba(255, 165, 0, 0.2);
+    text-transform: uppercase;
+}
+
