--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@
 
 
 .latest{
-  height: 90vh;
+  height: auto;
   background-color: black;
   display: flex;
   justify-content: center;
@@ -342,12 +342,13 @@ text-decoration: underline;
 
 
 .pagination{
-  height: 100vh;
+  /* height: 100vh; */
   background: black;
   border: 1px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 30px 0;
 }
 
 .page-cont{
@@ -376,4 +377,6 @@ text-shadow: 0 0 10px rgba(255, 165, 0, 0.8),
   0 0 40px rgba(255, 165, 0, 0.2);
     text-transform: uppercase;
 }
+
+
 
